syntax = "proto3";

package stub.model;

option go_package = "data-handler/model";

import 'model/data-source.proto';
import 'model/user.proto';
import 'model/resource.proto';
import 'model/record.proto';
import 'model/namespace.proto';

message AppConfig {
  string grpcAddr = 1;
  string httpAddr = 2;
  string jwtPrivateKey = 3;
  string jwtPublicKey = 4;
  bool disableAuthentication = 5;
  bool disableCache = 6;
}

message InitData {
  AppConfig config = 1;
  DataSource systemDataSource = 2;
  Namespace systemNamespace = 3;
  repeated DataSource initDataSources = 4;
  repeated Namespace initNamespaces = 5;
  repeated User initUsers = 6;
  repeated Resource initResources = 7;
  repeated Record initRecords = 8;
}